# halite3-bot

./: .gitignore  CMakeLists.txt  MyBot.cpp
src/: actions.h  basetypes.h  constants.h  container.h  direct_bot.cpp  direct_bot.h  engine.cpp  engine.h  entity.h  game.cpp  game.h  game.hpp  grid.cpp  grid.h  input.h  location.h  location.hpp  log.cpp  log.h  player.h  player.hpp  random_search.cpp  random_search.h  search.cpp  search.h  ship.h  ship.hpp
